# rust-raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bounding_box.rs  camera.rs  collider.rs  color.rs  file.rs  main.rs  material.rs  maths.rs  ray.rs  raytracer.rs  scene.rs  shape.rs  stats.rs  ui.rs
src/file/: file.rs
src/geom/: bounding_box.rs  mod.rs  shape.rs
src/geom/bvh/: aabb.rs  bvh_node.rs
src/geom/shapes/: shape.rs  sphere.rs
src/maths/: maths.rs  mod.rs  vector.rs
src/ray/: mod.rs  ray.rs  ray_collider.rs
src/ray/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs  utils.rs
src/render/: camera.rs  color.rs  mod.rs  raytracer.rs
src/scene/: generator.rs  mod.rs  scene.rs
src/stats/: stats.rs
src/ui/: color.rs  mod.rs  pixel.rs  text.rs  window.rs
