[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2021"
authors = ["GeekyAubergine | Zoe Aubert"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
pixels = "0.8.0"
winit = "0.26.0"
winit_input_helper = "0.11.0"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
crossbeam-channel = "0.5.1"
nalgebra = "0.29.0"
font8x8 = "0.3.1"
num-format = "0.4.0"